Suggestion model MAX_URL_ENTRIES not properly respected
The following discussion from !613 (merged) should be addressed:
-
@mcatanzaro started a discussion: (+8 comments) The code changes LGTM, but there is still some bug with the number of search results. The actual number of results is still limited to way less than 25. I don't see what's wrong with the code, but something must be off.
Type "epiphany" in the address bar. Then press the down arrow key until you reach the last of the suggestions. Note the total number of suggestions.
- Expected behavior: 25 suggestions, because we each surely have hundreds of pages in history with "epiphany" in the URL.
- Actual behavior: I am currently seeing 11 entries total: two Switch to Tab, nine from history, zero bookmarks. I should see two Switch to Tab and 23 history entries. Something is wrong.