Fix history query limit

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/1155